5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1714_2522.log
== TEST (2019-05-15 13:53:28) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont < n):
	acum = acum + (2 * (1 +  (cont / (cont + 2))))
	cont = cont + 1
print(round(acum, 10))
-- OUTPUT:
31.4204906205
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:53:36) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont < n):
	acum = acum + (2 * (1 +  (cont / (cont + 2))))
	cont = cont + 1
print(round(acum, 10))
-- OUTPUT:
31.4204906205
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:54:05) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont <= 1):
	acum = acum + (2 * (1 +  (cont / (cont + 2))))
	cont = cont + 1
print(round(acum, 10))
-- OUTPUT:
4.1666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:55:48) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont >= n):
	acum = acum + (2 * (1 +  (cont / (cont + 2))))
	cont = cont + 1
print(round(acum, 10))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:17:04) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont >= n):
	acum = acum + (1 +  (cont / (cont + 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:17:28) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont <= n):
	acum = acum + (1 +  (cont / (cont + 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- OUTPUT:
36.5871572872
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:18:42) 
-- CODE:
acum = 1.5
cont = 1
n = int(input("n termos: "))
while (cont <= n):
	acum = acum + (1 +  (cont / (cont + 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- OUTPUT:
36.5871572872
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:18:52) 
-- CODE:
acum = 1.5
cont = 0
n = int(input("n termos: "))
while (cont <= n):
	acum = acum + (1 +  (cont / (cont + 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- OUTPUT:
38.5871572872
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:19:15) 
-- CODE:
acum = 1.5
cont = 0
n = int(input("n termos: "))
while (cont <= n):
	acum = acum + (1 +  (cont / (cont + 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- OUTPUT:
38.5871572872
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:22:14) 
-- CODE:
acum = 1.5
cont = n
n = int(input("n termos: "))
while (cont >= 0):
	acum = acum * (1 +  (cont / (cont - 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cont = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 20:22:51) 
-- CODE:
acum = 1.5

n = int(input("n termos: "))
cont = n
while (cont >= 0):
	acum = acum * (1 +  (cont / (cont - 2)))
	cont = cont + 1
a = acum * 2
print(round(a, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cont = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
